--- a/Resources/Public/Css/bootstrap4-rte.css
+++ b/Resources/Public/Css/bootstrap4-rte.css
@@ -10874,7 +10874,7 @@ figure picture {
 figure .caption {
   padding-top: 0.5rem;
   font-size: 0.85rem;
-  word-break: break-all;
+  word-wrap: break-word;
   opacity: 0.8;
   text-align: center;
 }
